test/sema/typeck/pattern/bindings-in-alternatives-wrong-type.dora
enum Foo { A(Int64), B(Float32), C }
fn f(x: Foo): Int64 {
    match x {
        Foo::A(x) | Foo::B(x) => x,
        Foo::C => 1
    }
}
